--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.58.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.0"
   }
 }
